# goph420_w2025_lab03_stAK

./: README.md  pyproject.toml
src/goph420_lab03/: root_finding.py
