[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "goph420_lab03"
version = "0.0.1"
authors = [
{ name="Avneet Kaur", email="avneet.kaur3@ucalgary.ca" },
]
description="Lab 3 PyProject File"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/avneet-kaur3/goph420_w2025_lab03_stAK"